--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   unicons: ^2.0.2
   google_fonts: ^2.2.0
   firebase_auth:
+  provider: ^6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
