--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   provider: ^6.0.2
   lottie: ^1.2.1
   introduction_screen: ^2.1.0
-
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,16 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/SobGOGdark.png
-    - assets/icons/SobGOGlight.png
-    - assets/icons/hyundai.png
-    - assets/icons/volkswagen.png
-    - assets/icons/bmw.png
-    - assets/icons/toyota.png
-    - assets/images/i30n.png
-    - assets/images/golf.png
-    - assets/images/yaris.png
-    - assets/images/seo.png
+
+    - assets/images/
 
 
     # An image asset can refer to one or more resolution-specific "variants", see
