--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore:
   hexcolor: ^2.0.5
   carousel_slider: ^4.0.0
+  fluttertoast:
 
 
   # The following adds the Cupertino Icons font to your application.
