--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hexcolor: ^2.0.5
   carousel_slider: ^4.0.0
   fluttertoast:
+  firebase_database:
 
 
   # The following adds the Cupertino Icons font to your application.
