--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  get: ^4.6.1
+  get: 4.5.1
   unicons: ^2.0.2
   google_fonts: ^2.2.0
   firebase_auth:
